--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
 
     <!-- loading小動畫 -->
-    <div class="loading-wrapper">
-        <img src="./img/01-banner素材/loading.gif" alt="" class="loading">
-    </div>
+    <!-- <div class="loading-wrapper">
+        <img src="./img/01-banner素材/loading2.gif" alt="" class="loading">
+    </div> -->
 
 
 
